# PlateRec

./: CMakeLists.txt  README.md
include/: plate_det.h  plate_rec.h  utils.h
src/: plate_det.cpp  plate_rec.cpp  utils.cpp
test/: test_image_vehicle.cpp  test_video_vehicle.cpp
weights/pp_vehicle/: ch_PP-OCRv3_det_infer.onnx  ch_PP-OCRv3_det_infer12.onnx  model_convert.ipynb
